# gnu_searchsolve

./: .gitignore  HACKING  Makefile.am  NEWS  README  configure.ac
doc/: Makefile.am  searchsolve.texi
searchsolve/: Makefile.am  common.h  retcode.h  searchsolve.c  searchview.c  words.c  words.h  wordsearch.c  wordsearch.h
test/: Makefile.am  README  color.sed  package.m4  test-driver.c  testsuite  testsuite.at
test/suite/: readWords-1.at  searchsolve-1.at  searchsolve-2.at  searchsolve-i-1.at  searchsolve-i-2.at
